Fix front page spacing

--- a/wp-content/themes/FoundationPress/src/assets/scss/custom/_front-page.scss
+++ b/wp-content/themes/FoundationPress/src/assets/scss/custom/_front-page.scss
@@ -36,3 +36,8 @@
     }
   }
 }
+
+// Instagram feed container
+.wdi_feed_main_container {
+  margin-top: 1rem;
+}
