--- a/wp-content/themes/FoundationPress/src/assets/scss/custom/_header.scss
+++ b/wp-content/themes/FoundationPress/src/assets/scss/custom/_header.scss
@@ -43,3 +43,15 @@
     height: 48px;
   }
 }
+
+@media only screen and (max-width: 640px) {
+
+  .tcfopen-site-header {
+    height: auto;
+  }
+
+  .header-team-icons .team-icon {
+    height: 32px;
+  }
+
+}
